--- a/1_genome/lambda_learning_RNN.ipynb
+++ b/1_genome/lambda_learning_RNN.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x181a76afd30>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -33,23 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# sequences\n",
     "seqs = gen_data_dict('0_sequences_labels/signals.gz')\n",
     "\n",
-    "# filter long sequences\n",
-    "lengths = []\n",
-    "for i in range(len(seqs)):\n",
-    "    lengths.append(len(seqs[i][1]))\n",
-    "indices = [i for i, item in enumerate(lengths) if item < 400]\n",
-    "selected_seqs = [seqs[i] for i in indices]\n",
-    "\n",
     "# target\n",
-    "target_df_1 = pd.read_csv('1_training_data/target_lambda_fold1_base_e.csv').iloc[indices]\n",
-    "target_df_2 = pd.read_csv('1_training_data/target_lambda_fold2_base_e.csv').iloc[indices]\n",
+    "target_df_1 = pd.read_csv('1_training_data/target_lambda_fold1_base_e.csv')\n",
+    "target_df_2 = pd.read_csv('1_training_data/target_lambda_fold2_base_e.csv')\n",
     "\n",
     "targets_low_1  = target_df_1.iloc[:, 1:2].to_numpy()\n",
     "targets_high_1 = target_df_1.iloc[:, 2:3].to_numpy()\n",
@@ -67,34 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# filter\n",
     "idx_fold1 = [idx for idx, item in enumerate(y1_raw) if item[0] > -np.inf and item[1] < np.inf]\n",
-    "X1 = [selected_seqs[i] for i in idx_fold1]\n",
+    "X1 = [seqs[i] for i in idx_fold1]\n",
     "y1 = torch.mean(y1_raw[idx_fold1], axis=1).reshape(-1,1)\n",
     "\n",
     "idx_fold2 = [idx for idx, item in enumerate(y2_raw) if item[0] > -np.inf and item[1] < np.inf]\n",
-    "X2 = [selected_seqs[i] for i in idx_fold2]\n",
+    "X2 = [seqs[i] for i in idx_fold2]\n",
     "y2 = torch.mean(y2_raw[idx_fold2], axis=1).reshape(-1,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "84 174\n",
-      "84 174\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(X1), len(X2))\n",
     "print(len(y1), len(y2))"
@@ -102,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,21 +327,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dfs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m avg_acc \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mdfs\u001b[49m)):\n\u001b[0;32m      3\u001b[0m     rate1, rate2,_,_,_,_ \u001b[38;5;241m=\u001b[39m show_error_rate(dfs[i])\n\u001b[0;32m      4\u001b[0m     avg_acc\u001b[38;5;241m.\u001b[39mappend((rate1 \u001b[38;5;241m+\u001b[39m rate2)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'dfs' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "avg_acc = []\n",
     "for i in range(len(dfs)):\n",
