--- a/1_genome/lambda_learning_RNN_downsize_seqs.ipynb
+++ b/1_genome/lambda_learning_RNN_downsize_seqs.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1f8c30ffd30>"
+       "<torch._C.Generator at 0x1e6fe70fd30>"
       ]
      },
      "execution_count": 1,
@@ -37,19 +37,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def downsize_df(df, downsize):\n",
+    "    return df.groupby(['sequenceID', df.groupby('sequenceID').cumcount() // downsize]).agg({'data.i': 'first', 'logratio': 'mean'}).reset_index(level=1, drop=True).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# sequences\n",
     "seqs = gen_data_dict('0_sequences_labels/signals.gz')\n",
+    "labels = gen_data_dict('0_sequences_labels/labels.gz')\n",
     "\n",
-    "# filter long sequences\n",
-    "lengths = []\n",
-    "for i in range(len(seqs)):\n",
-    "    lengths.append(len(seqs[i][1]))\n",
-    "indices = [i for i, item in enumerate(lengths) if item < 200]\n",
-    "selected_seqs = [seqs[i] for i in indices]\n",
+    "downsized_seqs = ()\n",
+    "for s in seqs:\n",
+    "    new_seq = (s[0], downsize_df(s[1], len(s[1])//300+1))\n",
+    "    downsized_seqs += (new_seq, )\n",
     "\n",
     "# target\n",
-    "target_df_1 = pd.read_csv('1_training_data/target_lambda_fold1_base_e.csv').iloc[indices]\n",
-    "target_df_2 = pd.read_csv('1_training_data/target_lambda_fold2_base_e.csv').iloc[indices]\n",
+    "target_df_1 = pd.read_csv('1_training_data/target_lambda_fold1_base_e.csv')\n",
+    "target_df_2 = pd.read_csv('1_training_data/target_lambda_fold2_base_e.csv')\n",
     "\n",
     "targets_low_1  = target_df_1.iloc[:, 1:2].to_numpy()\n",
     "targets_high_1 = target_df_1.iloc[:, 2:3].to_numpy()\n",
@@ -67,31 +76,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in range(len(seqs)):\n",
+    "#     print(len(seqs[i][1]), len(downsized_seqs[i][1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# filter\n",
     "idx_fold1 = [idx for idx, item in enumerate(y1_raw) if item[0] > -np.inf and item[1] < np.inf]\n",
-    "X1 = [selected_seqs[i] for i in idx_fold1]\n",
+    "X1 = [downsized_seqs[i] for i in idx_fold1]\n",
     "y1 = torch.mean(y1_raw[idx_fold1], axis=1).reshape(-1,1)\n",
     "\n",
     "idx_fold2 = [idx for idx, item in enumerate(y2_raw) if item[0] > -np.inf and item[1] < np.inf]\n",
-    "X2 = [selected_seqs[i] for i in idx_fold2]\n",
+    "X2 = [downsized_seqs[i] for i in idx_fold2]\n",
     "y2 = torch.mean(y2_raw[idx_fold2], axis=1).reshape(-1,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56 121\n",
-      "56 121\n"
+      "190 313\n",
+      "190 313\n"
      ]
     }
    ],
@@ -102,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,31 +130,24 @@
     "    def __init__(self, extracted_features, hidden_layers, hidden_size):\n",
     "        super(RNNModel, self).__init__()\n",
     "        self.rnn = nn.RNN(input_size=1, hidden_size=extracted_features, num_layers=1, nonlinearity='tanh', bias=True, batch_first=False)\n",
-    "\n",
     "        # M2\n",
     "        self.hidden_layers = hidden_layers\n",
     "        self.hidden_size   = hidden_size\n",
-    "\n",
     "        # Define input layer\n",
     "        self.input_layer = nn.Linear(extracted_features, hidden_size)\n",
-    "        \n",
     "        # Define hidden layers\n",
     "        self.hidden = nn.ModuleList([nn.Linear(hidden_size, hidden_size) for _ in range(hidden_layers)])\n",
-    "        \n",
     "        # Define output layer\n",
     "        self.output_layer = nn.Linear(hidden_size, 1)\n",
     "\n",
     "    def forward(self, x):\n",
     "        _, x = self.rnn(x)\n",
-    "\n",
     "        # M2\n",
     "        # Forward pass through input layer\n",
     "        x = torch.relu(self.input_layer(x))\n",
-    "        \n",
     "        # Forward pass through hidden layers\n",
     "        for layer in self.hidden:\n",
     "            x = torch.relu(layer(x))\n",
-    "        \n",
     "        # Forward pass through output layer\n",
     "        x = self.output_layer(x)\n",
     "        return x"
@@ -143,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,14 +205,17 @@
     "        # Training loop for the specified number of iterations\n",
     "        train_losses = []\n",
     "        val_losses = []\n",
-    "        for i in range(30):\n",
+    "        for i in range(50):\n",
     "            loss_sum = 0.0\n",
     "            val_loss_sum = 0.0\n",
     "            for j in range(len(X_train_tensor)):\n",
+    "                model.train()\n",
     "                optimizer.zero_grad()\n",
-    "                seq = torch.tensor(seqs[j][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1, 1)\n",
+    "\n",
+    "                seq = torch.tensor(X_train_tensor[j][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1, 1)\n",
     "                output = model(seq)\n",
     "                loss = loss_func(output[0], y_train_tensor[j])\n",
+    "                \n",
     "                loss.backward()\n",
     "                optimizer.step()\n",
     "                loss_sum += loss.item()\n",
@@ -208,14 +223,11 @@
     "\n",
     "            with torch.no_grad():\n",
     "                for k in range(len(X_val_tensor)):\n",
-    "                    seq = torch.tensor(seqs[k][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1, 1)\n",
+    "                    seq = torch.tensor(X_val_tensor[k][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1, 1)\n",
     "                    val_output = model(seq)\n",
     "                    val_loss = loss_func(val_output[0], y_val_tensor[k])\n",
     "                    val_loss_sum += val_loss.item()\n",
     "                val_losses.append(val_loss_sum / len(X_val_tensor))\n",
-    "            \n",
-    "            # # print testing\n",
-    "            # print(i, \"train_loss, val_loss:\", loss_sum / len(X_train_tensor), val_loss_sum / len(X_val_tensor))\n",
     "\n",
     "        best_ite = np.argmin(val_losses) + 1\n",
     "        best_ites.append(best_ite)\n",
@@ -224,13 +236,12 @@
     "        plot_loss(train_losses, val_losses, train_set_name='subtrain', test_set_name='val')\n",
     "\n",
     "    best_no_ite = int(np.mean(best_ites))\n",
-    "    \n",
     "    return best_no_ite"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,10 +253,13 @@
     "    # Training loop\n",
     "    for _ in range(n_ites):\n",
     "        for i in range(len(X)):\n",
+    "            model.train()\n",
     "            optimizer.zero_grad()\n",
-    "            seq = torch.tensor(seqs[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1, 1)\n",
+    "\n",
+    "            seq = torch.tensor(X[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1, 1)\n",
     "            output = model(seq)\n",
     "            loss = loss_func(output[0], y[i])\n",
+    "            \n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "    \n",
@@ -254,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,11 +303,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def try_model(X1, X2, y1, y2, seqs, config):\n",
+    "def try_model(X1, X2, y1, y2, downsized_seqs, seqs, labels, config):\n",
     "    n_hiddens  = config['n_hiddens']\n",
     "    layer_size = config['layer_size']\n",
     "    n_features = config['n_features']\n",
@@ -304,19 +318,17 @@
     "    model1 = train_model(X1, y1, n_features, n_hiddens, layer_size, best_no_ite_1)\n",
     "    model2 = train_model(X2, y2, n_features, n_hiddens, layer_size, best_no_ite_2)\n",
     "\n",
-    "    # torch.save(model1.state_dict(), '3_learned_models/3_rnn/model1_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
-    "    # torch.save(model2.state_dict(), '3_learned_models/3_rnn/model2_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    torch.save(model1.state_dict(), '3_learned_models/3_rnn/model1_downsized_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    torch.save(model2.state_dict(), '3_learned_models/3_rnn/model2_downsized_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
     "\n",
-    "    ldas1 = np.zeros(len(seqs))\n",
-    "    ldas2 = np.zeros(len(seqs))\n",
+    "    ldas1 = np.zeros(len(downsized_seqs))\n",
+    "    ldas2 = np.zeros(len(downsized_seqs))\n",
     "    with torch.no_grad():\n",
-    "        for i in range(len(seqs)):\n",
-    "            seq = torch.tensor(seqs[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1,1)\n",
+    "        for i in range(len(downsized_seqs)):\n",
+    "            seq = torch.tensor(downsized_seqs[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1,1)\n",
     "            ldas1[i] = model1(seq).numpy()[0][0]\n",
     "            ldas2[i] = model2(seq).numpy()[0][0]\n",
     "\n",
-    "    seqs   = gen_data_dict('0_sequences_labels/signals.gz')\n",
-    "    labels = gen_data_dict('0_sequences_labels/labels.gz')\n",
     "    df = get_df_stat(ldas1, ldas2, seqs, labels)\n",
     "\n",
     "    return df"
@@ -324,14 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the values for n_features, n_hiddens and layer_size\n",
-    "n_features        = [4, 8, 16]\n",
-    "n_hiddens_values  = [0, 1, 2, 3]\n",
-    "layer_size_values = [4, 8, 16, 32]\n",
+    "n_features        = [4, 8, 12]\n",
+    "n_hiddens_values  = [0, 1, 2]\n",
+    "layer_size_values = [4, 8, 16]\n",
     "\n",
     "# Create a list of dictionaries\n",
     "configs = [{'n_features': f, 'n_hiddens': n, 'layer_size': s} for f in n_features for n in n_hiddens_values for s in layer_size_values]"
@@ -339,18 +351,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs = Parallel(n_jobs=32)(delayed(try_model)(X1, X2, y1, y2, seqs, configs[i]) for i in range(0, len(configs)))"
+    "dfs = Parallel(n_jobs=32)(delayed(try_model)(X1, X2, y1, y2, downsized_seqs, seqs, labels, configs[i]) for i in range(0, len(configs)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_features:  4 \t n_hiddens: 0 \t layer_size:  4 \t fold1.test: 83.67 \t fold2.test: 80.58 \t avg_acc: 82.12\n",
+      "n_features:  4 \t n_hiddens: 0 \t layer_size:  8 \t fold1.test: 83.40 \t fold2.test: 80.58 \t avg_acc: 81.99\n",
+      "n_features:  4 \t n_hiddens: 0 \t layer_size: 16 \t fold1.test: 83.27 \t fold2.test: 81.73 \t avg_acc: 82.50\n",
+      "n_features:  4 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 83.67 \t fold2.test: 80.00 \t avg_acc: 81.84\n",
+      "n_features:  4 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 83.54 \t fold2.test: 80.19 \t avg_acc: 81.86\n",
+      "n_features:  4 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 83.54 \t fold2.test: 80.58 \t avg_acc: 82.06\n",
+      "n_features:  4 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 83.27 \t fold2.test: 80.00 \t avg_acc: 81.64\n",
+      "n_features:  4 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 83.94 \t fold2.test: 80.19 \t avg_acc: 82.06\n",
+      "n_features:  4 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 83.54 \t fold2.test: 81.15 \t avg_acc: 82.35\n",
+      "n_features:  8 \t n_hiddens: 0 \t layer_size:  4 \t fold1.test: 83.40 \t fold2.test: 81.15 \t avg_acc: 82.28\n",
+      "n_features:  8 \t n_hiddens: 0 \t layer_size:  8 \t fold1.test: 83.67 \t fold2.test: 81.73 \t avg_acc: 82.70\n",
+      "n_features:  8 \t n_hiddens: 0 \t layer_size: 16 \t fold1.test: 83.80 \t fold2.test: 81.92 \t avg_acc: 82.86\n",
+      "n_features:  8 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 83.54 \t fold2.test: 80.58 \t avg_acc: 82.06\n",
+      "n_features:  8 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 83.01 \t fold2.test: 80.58 \t avg_acc: 81.79\n",
+      "n_features:  8 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 83.54 \t fold2.test: 80.96 \t avg_acc: 82.25\n",
+      "n_features:  8 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 83.67 \t fold2.test: 80.38 \t avg_acc: 82.03\n",
+      "n_features:  8 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 83.54 \t fold2.test: 80.00 \t avg_acc: 81.77\n",
+      "n_features:  8 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 83.54 \t fold2.test: 80.19 \t avg_acc: 81.86\n",
+      "n_features: 12 \t n_hiddens: 0 \t layer_size:  4 \t fold1.test: 83.54 \t fold2.test: 79.81 \t avg_acc: 81.67\n",
+      "n_features: 12 \t n_hiddens: 0 \t layer_size:  8 \t fold1.test: 83.54 \t fold2.test: 82.88 \t avg_acc: 83.21\n",
+      "n_features: 12 \t n_hiddens: 0 \t layer_size: 16 \t fold1.test: 83.67 \t fold2.test: 81.92 \t avg_acc: 82.80\n",
+      "n_features: 12 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 83.54 \t fold2.test: 80.96 \t avg_acc: 82.25\n",
+      "n_features: 12 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 83.67 \t fold2.test: 80.19 \t avg_acc: 81.93\n",
+      "n_features: 12 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 83.80 \t fold2.test: 80.19 \t avg_acc: 82.00\n",
+      "n_features: 12 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 82.47 \t fold2.test: 80.19 \t avg_acc: 81.33\n",
+      "n_features: 12 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 83.80 \t fold2.test: 80.00 \t avg_acc: 81.90\n",
+      "n_features: 12 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 83.01 \t fold2.test: 81.92 \t avg_acc: 82.46\n"
+     ]
+    }
+   ],
    "source": [
     "avg_acc = []\n",
     "for i in range(len(dfs)):\n",
@@ -362,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
