--- a/1_genome/0_testCode/lambda_learning_RNN_downsize_seqs_handle_length.ipynb
+++ b/1_genome/0_testCode/lambda_learning_RNN_downsize_seqs_handle_length.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1e6fe70fd30>"
+       "<torch._C.Generator at 0x154712c0a2b0>"
       ]
      },
      "execution_count": 1,
@@ -37,13 +37,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# hyper\n",
+    "downsize = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def downsize_df(df, downsize):\n",
     "    return df.groupby(['sequenceID', df.groupby('sequenceID').cumcount() // downsize]).agg({'data.i': 'first', 'logratio': 'mean'}).reset_index(level=1, drop=True).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +63,13 @@
     "\n",
     "downsized_seqs = ()\n",
     "for s in seqs:\n",
-    "    new_seq = (s[0], downsize_df(s[1], len(s[1])//300+1))\n",
+    "    new_seq = (s[0], downsize_df(s[1], len(s[1])//downsize+1))\n",
     "    downsized_seqs += (new_seq, )\n",
+    "\n",
+    "# manual X\n",
+    "data = pd.read_csv('../1_training_data/seq_features.csv')['count'].to_numpy()\n",
+    "data = np.log(np.log(data)).reshape(-1,1)\n",
+    "manual_X = torch.FloatTensor(data)\n",
     "\n",
     "# target\n",
     "target_df_1 = pd.read_csv('../1_training_data/target_lambda_fold1_base_e.csv')\n",
@@ -76,16 +91,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in range(len(seqs)):\n",
-    "#     print(len(seqs[i][1]), len(downsized_seqs[i][1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -93,10 +98,12 @@
     "# filter\n",
     "idx_fold1 = [idx for idx, item in enumerate(y1_raw) if item[0] > -np.inf and item[1] < np.inf]\n",
     "X1 = [downsized_seqs[i] for i in idx_fold1]\n",
+    "X1_man = manual_X[idx_fold1]\n",
     "y1 = torch.mean(y1_raw[idx_fold1], axis=1).reshape(-1,1)\n",
     "\n",
     "idx_fold2 = [idx for idx, item in enumerate(y2_raw) if item[0] > -np.inf and item[1] < np.inf]\n",
     "X2 = [downsized_seqs[i] for i in idx_fold2]\n",
+    "X2_man = manual_X[idx_fold2]\n",
     "y2 = torch.mean(y2_raw[idx_fold2], axis=1).reshape(-1,1)"
    ]
   },
@@ -109,14 +116,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "190 313\n",
-      "190 313\n"
+      "190 190 190\n",
+      "313 313 313\n"
      ]
     }
    ],
    "source": [
-    "print(len(X1), len(X2))\n",
-    "print(len(y1), len(y2))"
+    "print(len(X1), len(X1_man), len(y1))\n",
+    "print(len(X2), len(X2_man), len(y2))"
    ]
   },
   {
@@ -129,7 +136,10 @@
     "class RNNModel(nn.Module):\n",
     "    def __init__(self, extracted_features, hidden_layers, hidden_size):\n",
     "        super(RNNModel, self).__init__()\n",
-    "        self.rnn = nn.RNN(input_size=1, hidden_size=extracted_features, num_layers=1, nonlinearity='tanh', bias=True, batch_first=False)\n",
+    "        # M1\n",
+    "        self.rnn        = nn.RNN(input_size=1, hidden_size=extracted_features, num_layers=1, nonlinearity='tanh', bias=True, batch_first=False)\n",
+    "        self.manual_x   = nn.Linear(1, 8)\n",
+    "        self.manual_x_2 = nn.Linear(8, 1)\n",
     "        # M2\n",
     "        self.hidden_layers = hidden_layers\n",
     "        self.hidden_size   = hidden_size\n",
@@ -140,8 +150,11 @@
     "        # Define output layer\n",
     "        self.output_layer = nn.Linear(hidden_size, 1)\n",
     "\n",
-    "    def forward(self, x):\n",
+    "    def forward(self, manual_x, x):\n",
+    "        # M1\n",
     "        _, x = self.rnn(x)\n",
+    "        x2 = torch.relu(self.manual_x(manual_x))\n",
+    "        x2 = self.manual_x_2(x2)\n",
     "        # M2\n",
     "        # Forward pass through input layer\n",
     "        x = torch.relu(self.input_layer(x))\n",
@@ -150,7 +163,8 @@
     "            x = torch.relu(layer(x))\n",
     "        # Forward pass through output layer\n",
     "        x = self.output_layer(x)\n",
-    "        return x"
+    "\n",
+    "        return torch.add(x, x2)"
    ]
   },
   {
@@ -184,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cv_learn(X, y, extracted_features, n_hiddens, layer_size):\n",
+    "def cv_learn(X, y, X_man, extracted_features, n_hiddens, layer_size):\n",
     "    # Define the number of folds for cross-validation\n",
     "    kf = KFold(n_splits=2, shuffle=True, random_state=123)\n",
     "\n",
@@ -196,16 +210,17 @@
     "    for train_index, val_index in kf.split(X):\n",
     "        # Split the data into training and validation sets\n",
     "        X_train_tensor, X_val_tensor = [X[i] for i in train_index], [X[i] for i in val_index]\n",
+    "        X_man_train_tensor, X_man_val_tensor = [X_man[i] for i in train_index], [X_man[i] for i in val_index]\n",
     "        y_train_tensor, y_val_tensor = y[train_index], y[val_index]\n",
     "\n",
     "        # Define your model, loss, and optimizer\n",
     "        model = RNNModel(extracted_features=extracted_features, hidden_layers=n_hiddens, hidden_size=layer_size)\n",
-    "        optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "        optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
     "\n",
     "        # Training loop for the specified number of iterations\n",
     "        train_losses = []\n",
     "        val_losses = []\n",
-    "        for i in range(50):\n",
+    "        for i in range(20):\n",
     "            loss_sum = 0.0\n",
     "            val_loss_sum = 0.0\n",
     "            for j in range(len(X_train_tensor)):\n",
@@ -213,7 +228,7 @@
     "                optimizer.zero_grad()\n",
     "\n",
     "                seq = torch.tensor(X_train_tensor[j][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1, 1)\n",
-    "                output = model(seq)\n",
+    "                output = model(X_man_train_tensor[j], seq)\n",
     "                loss = loss_func(output[0], y_train_tensor[j])\n",
     "                \n",
     "                loss.backward()\n",
@@ -224,16 +239,13 @@
     "            with torch.no_grad():\n",
     "                for k in range(len(X_val_tensor)):\n",
     "                    seq = torch.tensor(X_val_tensor[k][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1, 1)\n",
-    "                    val_output = model(seq)\n",
+    "                    val_output = model(X_man_val_tensor[k], seq)\n",
     "                    val_loss = loss_func(val_output[0], y_val_tensor[k])\n",
     "                    val_loss_sum += val_loss.item()\n",
     "                val_losses.append(val_loss_sum / len(X_val_tensor))\n",
     "\n",
     "        best_ite = np.argmin(val_losses) + 1\n",
     "        best_ites.append(best_ite)\n",
-    "\n",
-    "        # plot\n",
-    "        plot_loss(train_losses, val_losses, train_set_name='subtrain', test_set_name='val')\n",
     "\n",
     "    best_no_ite = int(np.mean(best_ites))\n",
     "    return best_no_ite"
@@ -245,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(X, y, extracted_features, n_hiddens, layer_size, n_ites):\n",
+    "def train_model(X_man, X, y, extracted_features, n_hiddens, layer_size, n_ites):\n",
     "    model = RNNModel(extracted_features=extracted_features, hidden_layers=n_hiddens, hidden_size=layer_size)\n",
     "    loss_func = torch.nn.MSELoss()\n",
     "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
@@ -257,7 +269,7 @@
     "            optimizer.zero_grad()\n",
     "\n",
     "            seq = torch.tensor(X[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1, 1)\n",
-    "            output = model(seq)\n",
+    "            output = model(X_man[i], seq)\n",
     "            loss = loss_func(output[0], y[i])\n",
     "            \n",
     "            loss.backward()\n",
@@ -307,27 +319,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def try_model(X1, X2, y1, y2, downsized_seqs, seqs, labels, config):\n",
+    "def try_model(X1_man, X1, X2_man, X2, y1, y2, downsized_seqs, seqs, labels, config):\n",
     "    n_hiddens  = config['n_hiddens']\n",
     "    layer_size = config['layer_size']\n",
     "    n_features = config['n_features']\n",
     "\n",
-    "    best_no_ite_1 = cv_learn(X1, y1, n_features, n_hiddens, layer_size)\n",
-    "    best_no_ite_2 = cv_learn(X2, y2, n_features, n_hiddens, layer_size)\n",
+    "    best_no_ite_1 = cv_learn(X1, y1, X1_man, n_features, n_hiddens, layer_size)\n",
+    "    best_no_ite_2 = cv_learn(X2, y2, X2_man, n_features, n_hiddens, layer_size)\n",
     "\n",
-    "    model1 = train_model(X1, y1, n_features, n_hiddens, layer_size, best_no_ite_1)\n",
-    "    model2 = train_model(X2, y2, n_features, n_hiddens, layer_size, best_no_ite_2)\n",
+    "    model1 = train_model(X1_man, X1, y1, n_features, n_hiddens, layer_size, best_no_ite_1)\n",
+    "    model2 = train_model(X2_man, X2, y2, n_features, n_hiddens, layer_size, best_no_ite_2)\n",
     "\n",
-    "    torch.save(model1.state_dict(), '3_learned_models/3_rnn/model1_downsized_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
-    "    torch.save(model2.state_dict(), '3_learned_models/3_rnn/model2_downsized_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    # torch.save(model1.state_dict(), '3_learned_models/3_rnn/model1_downsized_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    # torch.save(model2.state_dict(), '3_learned_models/3_rnn/model2_downsized_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
     "\n",
     "    ldas1 = np.zeros(len(downsized_seqs))\n",
     "    ldas2 = np.zeros(len(downsized_seqs))\n",
     "    with torch.no_grad():\n",
     "        for i in range(len(downsized_seqs)):\n",
     "            seq = torch.tensor(downsized_seqs[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1,1)\n",
-    "            ldas1[i] = model1(seq).numpy()[0][0]\n",
-    "            ldas2[i] = model2(seq).numpy()[0][0]\n",
+    "            ldas1[i] = model1(manual_X[i], seq).numpy()[0][0]\n",
+    "            ldas2[i] = model2(manual_X[i], seq).numpy()[0][0]\n",
     "\n",
     "    df = get_df_stat(ldas1, ldas2, seqs, labels)\n",
     "\n",
@@ -355,45 +367,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs = Parallel(n_jobs=32)(delayed(try_model)(X1, X2, y1, y2, downsized_seqs, seqs, labels, configs[i]) for i in range(0, len(configs)))"
+    "dfs = Parallel(n_jobs=32)(delayed(try_model)(X1_man, X1, X2_man, X2, y1, y2, downsized_seqs, seqs, labels, configs[i]) for i in range(0, len(configs)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_features:  4 \t n_hiddens: 0 \t layer_size:  4 \t fold1.test: 83.67 \t fold2.test: 80.58 \t avg_acc: 82.12\n",
-      "n_features:  4 \t n_hiddens: 0 \t layer_size:  8 \t fold1.test: 83.40 \t fold2.test: 80.58 \t avg_acc: 81.99\n",
-      "n_features:  4 \t n_hiddens: 0 \t layer_size: 16 \t fold1.test: 83.27 \t fold2.test: 81.73 \t avg_acc: 82.50\n",
-      "n_features:  4 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 83.67 \t fold2.test: 80.00 \t avg_acc: 81.84\n",
-      "n_features:  4 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 83.54 \t fold2.test: 80.19 \t avg_acc: 81.86\n",
-      "n_features:  4 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 83.54 \t fold2.test: 80.58 \t avg_acc: 82.06\n",
-      "n_features:  4 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 83.27 \t fold2.test: 80.00 \t avg_acc: 81.64\n",
-      "n_features:  4 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 83.94 \t fold2.test: 80.19 \t avg_acc: 82.06\n",
-      "n_features:  4 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 83.54 \t fold2.test: 81.15 \t avg_acc: 82.35\n",
-      "n_features:  8 \t n_hiddens: 0 \t layer_size:  4 \t fold1.test: 83.40 \t fold2.test: 81.15 \t avg_acc: 82.28\n",
-      "n_features:  8 \t n_hiddens: 0 \t layer_size:  8 \t fold1.test: 83.67 \t fold2.test: 81.73 \t avg_acc: 82.70\n",
-      "n_features:  8 \t n_hiddens: 0 \t layer_size: 16 \t fold1.test: 83.80 \t fold2.test: 81.92 \t avg_acc: 82.86\n",
-      "n_features:  8 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 83.54 \t fold2.test: 80.58 \t avg_acc: 82.06\n",
-      "n_features:  8 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 83.01 \t fold2.test: 80.58 \t avg_acc: 81.79\n",
-      "n_features:  8 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 83.54 \t fold2.test: 80.96 \t avg_acc: 82.25\n",
-      "n_features:  8 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 83.67 \t fold2.test: 80.38 \t avg_acc: 82.03\n",
-      "n_features:  8 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 83.54 \t fold2.test: 80.00 \t avg_acc: 81.77\n",
-      "n_features:  8 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 83.54 \t fold2.test: 80.19 \t avg_acc: 81.86\n",
-      "n_features: 12 \t n_hiddens: 0 \t layer_size:  4 \t fold1.test: 83.54 \t fold2.test: 79.81 \t avg_acc: 81.67\n",
-      "n_features: 12 \t n_hiddens: 0 \t layer_size:  8 \t fold1.test: 83.54 \t fold2.test: 82.88 \t avg_acc: 83.21\n",
-      "n_features: 12 \t n_hiddens: 0 \t layer_size: 16 \t fold1.test: 83.67 \t fold2.test: 81.92 \t avg_acc: 82.80\n",
-      "n_features: 12 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 83.54 \t fold2.test: 80.96 \t avg_acc: 82.25\n",
-      "n_features: 12 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 83.67 \t fold2.test: 80.19 \t avg_acc: 81.93\n",
-      "n_features: 12 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 83.80 \t fold2.test: 80.19 \t avg_acc: 82.00\n",
-      "n_features: 12 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 82.47 \t fold2.test: 80.19 \t avg_acc: 81.33\n",
-      "n_features: 12 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 83.80 \t fold2.test: 80.00 \t avg_acc: 81.90\n",
-      "n_features: 12 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 83.01 \t fold2.test: 81.92 \t avg_acc: 82.46\n"
+      "n_features:  4 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 74.87 \t fold2.test: 71.35 \t avg_acc: 73.11\n",
+      "n_features:  4 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 74.20 \t fold2.test: 71.35 \t avg_acc: 72.77\n",
+      "n_features:  4 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 73.94 \t fold2.test: 68.46 \t avg_acc: 71.20\n",
+      "n_features:  4 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 74.20 \t fold2.test: 70.58 \t avg_acc: 72.39\n",
+      "n_features:  4 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 74.87 \t fold2.test: 73.46 \t avg_acc: 74.16\n",
+      "n_features:  4 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 74.20 \t fold2.test: 75.19 \t avg_acc: 74.70\n",
+      "n_features:  4 \t n_hiddens: 3 \t layer_size:  4 \t fold1.test: 74.34 \t fold2.test: 73.08 \t avg_acc: 73.71\n",
+      "n_features:  4 \t n_hiddens: 3 \t layer_size:  8 \t fold1.test: 74.07 \t fold2.test: 70.19 \t avg_acc: 72.13\n",
+      "n_features:  4 \t n_hiddens: 3 \t layer_size: 16 \t fold1.test: 73.40 \t fold2.test: 71.73 \t avg_acc: 72.57\n",
+      "n_features:  8 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 73.54 \t fold2.test: 70.38 \t avg_acc: 71.96\n",
+      "n_features:  8 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 75.00 \t fold2.test: 70.96 \t avg_acc: 72.98\n",
+      "n_features:  8 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 74.47 \t fold2.test: 71.15 \t avg_acc: 72.81\n",
+      "n_features:  8 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 73.54 \t fold2.test: 72.31 \t avg_acc: 72.92\n",
+      "n_features:  8 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 74.60 \t fold2.test: 70.38 \t avg_acc: 72.49\n",
+      "n_features:  8 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 75.53 \t fold2.test: 70.58 \t avg_acc: 73.05\n",
+      "n_features:  8 \t n_hiddens: 3 \t layer_size:  4 \t fold1.test: 73.80 \t fold2.test: 71.35 \t avg_acc: 72.57\n",
+      "n_features:  8 \t n_hiddens: 3 \t layer_size:  8 \t fold1.test: 73.67 \t fold2.test: 71.15 \t avg_acc: 72.41\n",
+      "n_features:  8 \t n_hiddens: 3 \t layer_size: 16 \t fold1.test: 75.13 \t fold2.test: 70.77 \t avg_acc: 72.95\n",
+      "n_features: 12 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 74.20 \t fold2.test: 71.35 \t avg_acc: 72.77\n",
+      "n_features: 12 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 73.40 \t fold2.test: 70.96 \t avg_acc: 72.18\n",
+      "n_features: 12 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 73.94 \t fold2.test: 70.58 \t avg_acc: 72.26\n",
+      "n_features: 12 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 74.34 \t fold2.test: 69.81 \t avg_acc: 72.07\n",
+      "n_features: 12 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 74.20 \t fold2.test: 70.38 \t avg_acc: 72.29\n",
+      "n_features: 12 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 73.80 \t fold2.test: 72.31 \t avg_acc: 73.06\n",
+      "n_features: 12 \t n_hiddens: 3 \t layer_size:  4 \t fold1.test: 73.40 \t fold2.test: 71.15 \t avg_acc: 72.28\n",
+      "n_features: 12 \t n_hiddens: 3 \t layer_size:  8 \t fold1.test: 75.00 \t fold2.test: 71.35 \t avg_acc: 73.17\n",
+      "n_features: 12 \t n_hiddens: 3 \t layer_size: 16 \t fold1.test: 73.94 \t fold2.test: 74.04 \t avg_acc: 73.99\n"
      ]
     }
    ],
@@ -403,7 +415,7 @@
     "    rate1, rate2,_,_,_,_ = show_error_rate(dfs[i])\n",
     "    avg_acc.append((rate1 + rate2)/2)\n",
     "    print(\"n_features: %2d \\t n_hiddens: %1d \\t layer_size: %2d \\t fold1.test: %5.2f \\t fold2.test: %5.2f \\t avg_acc: %5.2f\" % \n",
-    "          (configs[i]['n_features'], configs[i]['n_hiddens'], configs[i]['layer_size'], rate1, rate2, (rate1 + rate2)/2))"
+    "          (configs[i]['n_features'], configs[i]['n_hiddens']+1, configs[i]['layer_size'], rate1, rate2, (rate1 + rate2)/2))"
    ]
   },
   {
@@ -554,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
