--- a/1_genome/lambda_learning_linear_same_as_paper.ipynb
+++ b/1_genome/lambda_learning_linear_same_as_paper.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2493abbf390>"
+       "<torch._C.Generator at 0x25929cbf390>"
       ]
      },
      "execution_count": 1,
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, SquaredHingeLoss, plot_feature_targets\n",
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, SquaredHingeLoss\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
     "\n",
     "np.set_printoptions(precision=3)\n",
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# data features\n",
-    "data = pd.read_csv('../1_training_data/seq_features.csv')['count'].to_numpy()\n",
+    "data = pd.read_csv('1_training_data/seq_features.csv')['count'].to_numpy()\n",
     "data = np.log10(np.log(data)).reshape(-1,1)\n",
     "X = torch.FloatTensor(data)"
    ]
@@ -51,8 +51,8 @@
    "outputs": [],
    "source": [
     "# target\n",
-    "target_df_1 = pd.read_csv('../1_training_data/target_lambda_fold1_base_10.csv')\n",
-    "target_df_2 = pd.read_csv('../1_training_data/target_lambda_fold2_base_10.csv')\n",
+    "target_df_1 = pd.read_csv('1_training_data/target_lambda_fold1_base_10.csv')\n",
+    "target_df_2 = pd.read_csv('1_training_data/target_lambda_fold2_base_10.csv')\n",
     "\n",
     "targets_low_1  = torch.FloatTensor(target_df_1.iloc[:, 1:2].to_numpy())\n",
     "targets_high_1 = torch.FloatTensor(target_df_1.iloc[:, 2:3].to_numpy())\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "    # Instantiate model and loss function\n",
     "    model = LinearModel()\n",
     "    criterion = SquaredHingeLoss()\n",
-    "    optimizer = optim.SGD(model.parameters(), lr)\n",
+    "    optimizer = optim.Adam(model.parameters(), lr)\n",
     "\n",
     "    # Training loop\n",
     "    for epoch in range(epochs):\n",
@@ -106,13 +106,13 @@
     "            optimizer.step()\n",
     "            total_loss += loss.item()\n",
     "        if (epoch+1) % 100 == 0:\n",
-    "            print(f'Epoch [{epoch+1}/{epochs}], Loss: {total_loss/len(dataloader):.4f}')\n",
+    "            print(f'Epoch [{epoch+1}/{epochs}], Loss: {total_loss/len(dataloader):.3f}')\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,13 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def try_model(full_X, X1, X2, y1, y2, err_fold1_df, err_fold2_df, seqs, labels):\n",
-    "    model1 = train_model(X1, y1, 0.001, 500)\n",
-    "    model2 = train_model(X2, y2, 0.001, 500)\n",
+    "    model1 = train_model(X1, y1, 0.001, 400)\n",
+    "    model2 = train_model(X2, y2, 0.001, 400)\n",
     "\n",
     "    with torch.no_grad():\n",
     "        ldas1 = model1(full_X).numpy().reshape(-1)\n",
@@ -161,48 +161,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# getting dataframe of error count\n",
-    "err_fold1_df = pd.read_csv('../1_training_data/errors_fold1_base_10.csv')\n",
-    "err_fold2_df = pd.read_csv('../1_training_data/errors_fold2_base_10.csv')\n",
+    "err_fold1_df = pd.read_csv('1_training_data/errors_fold1_base_10.csv')\n",
+    "err_fold2_df = pd.read_csv('1_training_data/errors_fold2_base_10.csv')\n",
     "\n",
     "# getting sequences and labels data\n",
-    "seqs   = gen_data_dict('../0_sequences_labels/signals.gz')\n",
-    "labels = gen_data_dict('../0_sequences_labels/labels.gz')"
+    "seqs   = gen_data_dict('0_sequences_labels/signals.gz')\n",
+    "labels = gen_data_dict('0_sequences_labels/labels.gz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [100/1000], Loss: 1.1228\n",
-      "Epoch [200/1000], Loss: 1.0903\n",
-      "Epoch [300/1000], Loss: 1.0748\n",
-      "Epoch [400/1000], Loss: 1.0705\n",
-      "Epoch [500/1000], Loss: 1.0685\n",
-      "Epoch [600/1000], Loss: 1.0675\n",
-      "Epoch [700/1000], Loss: 1.0667\n",
-      "Epoch [800/1000], Loss: 1.0668\n",
-      "Epoch [900/1000], Loss: 1.0666\n",
-      "Epoch [1000/1000], Loss: 1.0661\n",
-      "Epoch [100/1000], Loss: 1.3820\n",
-      "Epoch [200/1000], Loss: 1.3467\n",
-      "Epoch [300/1000], Loss: 1.3374\n",
-      "Epoch [400/1000], Loss: 1.3335\n",
-      "Epoch [500/1000], Loss: 1.3341\n",
-      "Epoch [600/1000], Loss: 1.3336\n",
-      "Epoch [700/1000], Loss: 1.3338\n",
-      "Epoch [800/1000], Loss: 1.3339\n",
-      "Epoch [900/1000], Loss: 1.3332\n",
-      "Epoch [1000/1000], Loss: 1.3338\n"
+      "Epoch [100/400], Loss: 1.135\n",
+      "Epoch [200/400], Loss: 1.104\n",
+      "Epoch [300/400], Loss: 1.084\n",
+      "Epoch [400/400], Loss: 1.073\n",
+      "Epoch [100/400], Loss: 1.416\n",
+      "Epoch [200/400], Loss: 1.368\n",
+      "Epoch [300/400], Loss: 1.346\n",
+      "Epoch [400/400], Loss: 1.338\n"
      ]
     }
    ],
@@ -212,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fold1.test: 77.93 \t fold2.test: 74.62\n"
+      "fold1.test: 77.93 \t fold2.test: 75.38\n"
      ]
     }
    ],
