--- a/1_genome/lambda_learning_linear_same_as_paper.ipynb
+++ b/1_genome/lambda_learning_linear_same_as_paper.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x25929cbf390>"
+       "<torch._C.Generator at 0x1b5ff5bf390>"
       ]
      },
      "execution_count": 1,
@@ -148,8 +148,8 @@
    "outputs": [],
    "source": [
     "def try_model(full_X, X1, X2, y1, y2, err_fold1_df, err_fold2_df, seqs, labels):\n",
-    "    model1 = train_model(X1, y1, 0.001, 400)\n",
-    "    model2 = train_model(X2, y2, 0.001, 400)\n",
+    "    model1 = train_model(X1, y1, 0.001, 500)\n",
+    "    model2 = train_model(X2, y2, 0.001, 500)\n",
     "\n",
     "    with torch.no_grad():\n",
     "        ldas1 = model1(full_X).numpy().reshape(-1)\n",
@@ -183,14 +183,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [100/400], Loss: 1.135\n",
-      "Epoch [200/400], Loss: 1.104\n",
-      "Epoch [300/400], Loss: 1.084\n",
-      "Epoch [400/400], Loss: 1.073\n",
-      "Epoch [100/400], Loss: 1.416\n",
-      "Epoch [200/400], Loss: 1.368\n",
-      "Epoch [300/400], Loss: 1.346\n",
-      "Epoch [400/400], Loss: 1.338\n"
+      "Epoch [100/600], Loss: 1.135\n",
+      "Epoch [200/600], Loss: 1.104\n",
+      "Epoch [300/600], Loss: 1.084\n",
+      "Epoch [400/600], Loss: 1.073\n",
+      "Epoch [500/600], Loss: 1.071\n",
+      "Epoch [600/600], Loss: 1.068\n",
+      "Epoch [100/600], Loss: 1.394\n",
+      "Epoch [200/600], Loss: 1.358\n",
+      "Epoch [300/600], Loss: 1.342\n",
+      "Epoch [400/600], Loss: 1.337\n",
+      "Epoch [500/600], Loss: 1.334\n",
+      "Epoch [600/600], Loss: 1.333\n"
      ]
     }
    ],
@@ -207,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fold1.test: 77.93 \t fold2.test: 75.38\n"
+      "fold1.test: 78.19 \t fold2.test: 75.58\n"
      ]
     }
    ],
