add cancer sequence

--- a/sequence_data/cancer/process.ipynb
+++ b/sequence_data/cancer/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,36 +11,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"profiles.csv\")"
+    "df = pd.read_csv(\"profiles_raw.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assuming df is the original DataFrame\n",
-    "# Step 1: Modify the original DataFrame by appending \".F1\" to 'sequenceID'\n",
-    "df['sequenceID'] = df['sequenceID'] + '.F1'\n",
-    "\n",
-    "# Step 2: Create a copy of the DataFrame\n",
+    "df['sequenceID'] = df['sequenceID'] + '.F1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_copy = df.copy()\n",
-    "\n",
-    "# Step 3: Modify the copied DataFrame by appending \".F2\" to 'sequenceID'\n",
-    "df_copy['sequenceID'] = df_copy['sequenceID'].str.replace('.F1', '.F2')\n",
-    "\n",
-    "# Step 4: Append the modified copy to the original DataFrame\n",
+    "df_copy['sequenceID'] = df_copy['sequenceID'].str.replace('.F1', '.F2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_final = pd.concat([df, df_copy], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final = df_final.rename(columns={'logratio': 'signal'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
